# nice_tts_for_m4a

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/nice_tts/: __init__.py  __main__.py  audio_processor.py  cli.py  cli_simple.py  gpu_utils.py  ignore_handler.py  m4a_handler.py  text_formatter.py  transcriber.py
