[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nice-tts"
dynamic = ["version"]
description = "AI-Powered Audio Transcription Tool with Chinese Language Optimization"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Nice-TTS Developer" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["audio", "transcription", "whisper", "ai", "chinese", "speech-to-text"]
requires-python = ">=3.11"
dependencies = [
    "openai-whisper>=20231117",
    "click>=8.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.64.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
gpu = [
    "torch[cuda]",
    "torchaudio[cuda]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/nice-tts"
Documentation = "https://github.com/your-username/nice-tts#readme"
Repository = "https://github.com/your-username/nice-tts"
Issues = "https://github.com/your-username/nice-tts/issues"

[project.scripts]
nice-tts = "nice_tts.cli:main"

[tool.hatch.version]
path = "src/nice_tts/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nice_tts"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["nice_tts"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests",
]